# smokefreelab

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: experiment_designer.py
deploy/hf_space/: DEPLOY.md  README.md  build.sh  requirements.txt
docs/: experiment_protocol.md  frequentist_vs_bayesian.md  profile_readme.md  ringkasan_eksekutif.md
docs/screenshots/: README.md
notebooks/: 01_eda_ga4_sample.ipynb  02_ab_framework.ipynb  05_mtattribution.ipynb  06_business_case.ipynb  07_price_elasticity.ipynb  08_clv_rfm.ipynb  09_mmm.ipynb  README.md
reports/: README.md  _derivation.ipynb  cover_letter_sampoerna.md  deck_outline.md  executive_onepager.md  smokefreelab_deck.pptx
scripts/: capture_screenshots.py  capture_screenshots.sh  render_cover_letter.py  render_deck.py  render_onepager.py  setup_bigquery.sh
sql/: 01_funnel_decomposition.sql
src/smokefreelab/: __init__.py
src/smokefreelab/analytics/: __init__.py  clv.py  elasticity.py  viz.py
src/smokefreelab/attribution/: __init__.py  heuristics.py  markov.py  mmm.py  shapley.py
src/smokefreelab/data/: __init__.py  bigquery.py
src/smokefreelab/experiment/: __init__.py  ab_test.py
src/smokefreelab/features/: __init__.py  propensity.py
tests/: test_ab_test.py  test_attribution.py  test_bigquery.py  test_clv.py  test_elasticity.py  test_mmm.py  test_propensity.py  test_smoke.py  test_viz.py
